# income-expense-calc

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  drun.sh  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  venv.sh
website/: __init__.py  auth.py  models.py  views.py
website/static/js/: script.js
website/templates/: base.html  home.html  login.html  register.html
