[project]
name = "budget-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blinker==1.9.0",
    "click==8.1.8",
    "flask==3.1.0",
    "flask-blueprint==1.3.0",
    "flask-login==0.6.3",
    "flask-sqlalchemy==3.1.1",
    "greenlet==3.1.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.5",
    "markupsafe==3.0.2",
    "msgpack==1.1.0",
    "psycopg2-binary>=2.9.10",
    "pynvim==0.5.2",
    "python-dotenv==1.0.1",
    "sqlalchemy==2.0.38",
    "typing-extensions==4.12.2",
    "werkzeug==3.1.3",
]
